# kimcp

./: .env.example  .gitignore  README.en.md  README.ko.md  README.md  main.py  pyproject.toml
src/: config.py  kakao.py  naver.py  sk.py  web.py
